--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -11,8 +11,20 @@
     <div class="col-md-12">
       <h2>Items</h2>
       <ul class="list-group mb-4">
-        <!-- List the todo items here -->
+        {% for item in all_items %}
+        <li>{{ item.title }}</li>
+        {% endfor %}
       </ul>
+    </div>
+    <div class="col-md-6">
+      <form id="new-item" method="post" action="/add-item">
+        <div class="input-group">
+          <input type="text" name="title" id="title" class="form-control" placeholder="Item title">
+          <div class="input-group-append">
+            <button type="submit" class="btn btn-primary">Create item</button>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
 {% endblock %}
