actioned comments and added auto focus to the create item input field

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -39,7 +39,7 @@
     <div class="container">
       <form id="new-item" method="post" action="/add-item">
         <div class="input-group">
-          <input type="text" name="title" id="title" class="form-control" placeholder="Item title">
+          <input type="text" name="title" id="title" class="form-control" required placeholder="Item title">
           <div class="input-group-append">
             <button type="submit" class="btn btn-primary">Create item</button>
           </div>
