--- a/todo_app/templates/layout.html
+++ b/todo_app/templates/layout.html
@@ -23,7 +23,11 @@
     <script>
       $(function () {
         $('[data-toggle="tooltip"]').tooltip()
-      })
+  
+        $(document).ready(function() {
+          $('#title').focus();
+        });
+      });
     </script>
   </body>
 </html>
