--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -57,7 +57,7 @@
       <form id="new-card" method="post" action="/add-card">
         <div class="input-group">
           <input type="text" name="name" id="name" class="form-control" required placeholder="Card name">
-          <input type="text" name="desc" id="desc" class="form-control" required placeholder="Card description">
+          <input type="text" name="desc" id="desc" class="form-control" placeholder="Card description">
           <input type="text" name="due-date" id="due-date" class="form-control" placeholder="Due date" data-provide="datepicker">
           <div class="input-group-append">
             <button type="submit" class="btn btn-primary">Create card</button>
