--- a/todo_app/templates/view_card.html
+++ b/todo_app/templates/view_card.html
@@ -13,8 +13,8 @@
         <ul class="list-group mb-4">
           <li class="list-group-item">
             <h5 class="card-title">{{ c.name }}</h5>
-            {% if c.description %}
-              <h6 class="card-subtitle font-weight-normal text-muted">{{ c.description }}</h6>
+            {% if c.desc %}
+              <h6 class="card-subtitle font-weight-normal text-muted">{{ c.desc }}</h6>
             {% endif %}
           </li>
         </ul>
@@ -24,14 +24,14 @@
     </div>
     <div class="col-md-6 d-flex justify-content-end">
       {% if c.status == 'To Do' or c.status == 'Complete' %}
-      <form class="mr-3" id="start-card" method="post" action="/start-card/{{ c.id }}">
+      <form class="mr-3" id="start-card" method="post" action="/start-card/{{ c._id }}">
         <button type="submit" class="btn btn-secondary">Mark as in progress</button>
       </form>
-      <form class="mr-3" id="archive-card" method="post" action="/archive-card/{{ c.id }}">
-        <button type="submit" class="btn btn-outline-info">Archive</button>
+      <form class="mr-3" id="delete-card" method="post" action="/delete-card/{{ c._id }}">
+        <button type="submit" class="btn btn-outline-info">Delete</button>
       </form>
       {% else %}
-      <form id="complete-card" method="post" action="/complete-card/{{ c.id }}">
+      <form id="complete-card" method="post" action="/complete-card/{{ c._id }}">
         <button type="submit" class="btn btn-primary">Mark as complete</button>
       </form>
       {% endif %}
